Wip - initial integration with APIs started